<resources>
    <!-- Activity Titles -->
    <string name="app_name">Paint Meister</string>
    <string name="main_menu_title">Let\'s Get Painting!</string>
    <string name="info_title">App Info</string>

    <!-- Subtitles -->
    <string name="info_devs_subtitle">Developers:</string>
    <string name="dev_name1">Chris Wolf</string>
    <string name="dev_name2">Evert Ball</string>
    <string name="date_created_subtitle">Date Created:</string>

    <!-- Button Text -->
    <string name="paint_btn_text">Paint</string>
    <string name="load_painting_btn_text">Load Painting</string>
    <string name="preferences_btn">Preferences</string>
    <string name="info_btn">About App</string>

    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="date_created">May 4th, 2020</string>
    <string name="app_description">
        This app was created as a project for Dr. Andrew Scott\'s CS467: Mobile Application
        Development course at Western Carolina University. All rights belong to Dr. Scott and
        Western Carolina University.
    </string>

    <!-- Image Descriptions -->
    <string name="chris_photo_desc">Photo of Chris Wolf, one of the developers of this app</string>
    <string name="evert_photo_desc">Photo of Evert Ball, one of the developers of this app</string>

    <!-- Misc strings -->
    <string name="save_text">Save</string>
    <string name="load_text">Load</string>
    <string name="paint_color_text">Choose Paint Color</string>
    <string name="brush_width_text">Brush Width</string>
    <string name="choose_width">Change Brush Width</string>
    <string name="width_msg">Enter a new brush width:</string>
    <string name="default_painting_title">New Painting</string>
    <string name="change_title_title">Change painting title?</string>
    <string name="new_title_message">What is the new title of your painting?</string>
</resources>
