<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/tv_main_menu_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/main_menu_title"
        android:textSize="@dimen/title_txt_size"
        android:layout_weight="3" />
    
    <Button
        android:id="@+id/btn_paint"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/paint_btn_text"
        android:textSize="@dimen/default_btn_text_size"/>

    <Button
        android:id="@+id/btn_load"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/load_painting_btn_text"
        android:textSize="@dimen/default_btn_text_size"/>

    <Button
        android:id="@+id/btn_prefs"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/preferences_btn"
        android:textSize="@dimen/default_btn_text_size"/>

<!-- TODO: Make into an info button to match storyboard -->
    <Button
        android:id="@+id/btn_info"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/info_btn"
        android:textSize="@dimen/default_btn_text_size"/>

</LinearLayout>